--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 *::after,
 *::before {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -13,16 +13,15 @@ body {
   font-style: normal;
   margin: 0;
   padding: 0;
-  color: #F9CA36;
-  font-family: 'Source Sans 3', sans-serif;
-  background-color: #2D04C6;
+  color: #f9ca36;
+  font-family: "Source Sans 3", sans-serif;
+  background-color: #2d04c6;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
 
 /*
 body {
@@ -40,4 +39,3 @@ code {
     monospace;
 }
 */
-
